--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.4.1",
     "file-saver": "^2.0.5",
     "next": "15.1.7",
+    "nodemailer": "^6.10.0",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -24,6 +25,7 @@
     "@tailwindcss/postcss": "^4.0.9",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "daisyui": "^5.0.0",
